--- a/workflow_ui/src/main/resources/com/liveramp/workflow_ui/www/dashboards.html
+++ b/workflow_ui/src/main/resources/com/liveramp/workflow_ui/www/dashboards.html
@@ -137,7 +137,7 @@
                     $.ajax({
                       type: 'DELETE',
                       dataType: 'html',
-                      url: "dashboards?name=" + name, //  TODO be all restful and shit
+                      url: "dashboards?name=" + name, //  TODO really rewrite restfully
                       success: refreshDashboards
                     });
                   }
